--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cpp-review-dune.github.io",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Un repositorio donde compartir notas acerca de C++ con pdfs escritos en LaTeX.",
   "main": "index.js",
   "authors": {
@@ -15,6 +15,6 @@
   "license": "MIT",
   "devDependencies": {
     "@maginapp/vuepress-plugin-katex": "^1.0.11",
-    "vuepress": "^1.5.3"
+    "vuepress": "^2.0.0-beta.35"
   }
 }
