--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@maginapp/vuepress-plugin-katex": "^1.0.11",
+    "@renovamen/vuepress-plugin-katex": "^2.0.0-alpha.10",
     "vuepress": "^2.0.0-beta.35"
   }
 }
