--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -40,7 +40,7 @@ jobs:
           mkdir -p $OUTPUT_DIR
           wget https://docs.paraview.org/_/downloads/en/latest/pdf/ -O $OUTPUT_DIR/docs-paraview-org-en-latest.pdf
           wget https://dumux.org/docs/handbook/master/dumux-handbook.pdf -O $OUTPUT_DIR/dumux-handbook.pdf
-          wget https://elib.uni-stuttgart.de/bitstream/11682/9377/1/simtech-tr2017-1_coupling-dumux-and-pdelab-to-investigate-evaporation.pdf -O $OUTPUT_DIR/simtech-tr2017-1_coupling-dumux-and-pdelab-to-investigate-evaporation.pdf
+          wget --no-check-certificate https://elib.uni-stuttgart.de/bitstream/11682/9377/1/simtech-tr2017-1_coupling-dumux-and-pdelab-to-investigate-evaporation.pdf -O $OUTPUT_DIR/simtech-tr2017-1_coupling-dumux-and-pdelab-to-investigate-evaporation.pdf
           mv doc/html $OUTPUT_DIR/hdnum
           mv tutorial/hdnum.pdf $OUTPUT_DIR
           mv tutorial/hdnum-tutorial-article.pdf $OUTPUT_DIR
